--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ section{
     justify-content: center;
     flex-direction: column;
     height: 50vh;
+    padding: 15;
   }
   
   .contact-info-upper-container {
